# audiovis

./: .gitignore  BRANDING.md  Cargo.toml  README.md  build.rs
assets/presets/: acid-kaleido.json  berlin-tunnel.json  glitch-city.json  init.json  lettering.json  mandala-trip.json  mandelbrot.json  mandelzoom.json  neon-grid.json  oscillo.json  plasma-bloom.json  prism-stack.json  reaction-bloom.json  reaction.json  smoke-machine.json  smoke-room.json  spiral-waves.json  vectorscope.json  vhs-dream.json  wireframe-obj.json  wireframe.json
assets/scripts/: automation.js  beat-strobe.js  particles.js  vu-bars.js
crates/audiovis-wasm/: Cargo.toml
crates/audiovis-wasm/src/: lib.rs
crates/render-core/: Cargo.toml
crates/render-core/src/: compositor.rs  engine.rs  events.rs  generators.rs  gl.rs  isf.rs  lib.rs  media.rs  mesh.rs  pipeline.rs  text.rs
crates/render-core/src/params/: modmatrix.rs  store.rs
crates/render-core/src/shaders/: fullscreen.vert  lib.glsl  test_plasma.frag
crates/render-core/src/shaders/composite/: blend.frag
crates/render-core/src/shaders/post/: feedback.frag  glitch.frag  grade.frag  lofi.frag  mirror.frag
crates/render-core/src/shaders/sim/: ca_render.frag  rd_seed.frag  smoke_render.frag  smoke_seed.frag  smoke_step.frag
isf/: feedback-dot.fs  plasma.fs
proto/: control.proto
src/: app.rs  cli.rs  config.rs  engine.rs  main.rs  presets.rs  resources.rs  script.rs  version.rs
src/audio/: analysis.rs  mod.rs
src/control/: midi.rs  mod.rs  osc.rs
src/link/: mod.rs
src/params/: mapping.rs  mod.rs  modmatrix.rs  store.rs  value.rs
src/render/: compositor.rs  generators.rs  gl.rs  isf.rs  media.rs  mesh.rs  mod.rs  pipeline.rs  post.rs  sim.rs  text.rs
src/render/backend/: driver.rs  drm.rs  mod.rs  window.rs
src/render/shaders/: lib.glsl  text.frag
src/render/shaders/composite/: copy.frag  media.frag
src/render/shaders/mesh/: wire.frag  wire.vert
src/render/shaders/post/: bloom.frag  blur.frag  chromatic.frag  glitch.frag  huecycle.frag  vhs.frag
src/render/shaders/sim/: ca_seed.frag  ca_step.frag  rd_render.frag  rd_step.frag
src/video/: mod.rs
src/web/: mod.rs  server.rs
tools/: build-wasm.sh
webui/: app.js  index.html  style.css  wasm-spike.html
