[package]
name = "audiovis"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Live audio-reactive VJ visualizer with VHS / analog-video aesthetics, controllable over MIDI, OSC and a web UI"
authors = ["DatanoiseTV"]
license = "MIT"
repository = "https://github.com/DatanoiseTV/audiovis"
default-run = "audiovis"

[[bin]]
name = "audiovis"
path = "src/main.rs"

[features]
# The base binary is deliberately small so it runs on weak ARM SoCs.
# Heavier capabilities are opt-in.
default = []
# USB webcam / v4l / video-file input layer (pulls in extra decode deps).
camera = []

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"

# Rendering: raw GL via glow so the same code targets GLES2 (Pi/CHIP) and
# desktop GL 2.1 (macOS/Linux). winit + glutin provide the window and context.
glow = "0.16"
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"

# Audio capture + analysis.
cpal = "0.15"
realfft = "3"

# Control inputs: MIDI (incl. virtual ports) and OSC over UDP.
midir = "0.10"
rosc = "0.10"

[build-dependencies]

[profile.release]
# Tuned for small, fast binaries on constrained ARM targets.
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
