[package]
name = "audiovis"
version = "0.6.0"
edition = "2021"
rust-version = "1.82"
description = "Live audio-reactive VJ visualizer with VHS / analog-video aesthetics, controllable over MIDI, OSC and a web UI"
authors = ["DatanoiseTV"]
license = "MIT"
repository = "https://github.com/DatanoiseTV/audiovis"
default-run = "audiovis"

[[bin]]
name = "audiovis"
path = "src/main.rs"

[features]
# Scripting (the embedded JS runtime) is on by default for the desktop build;
# drop it with `--no-default-features` for the leanest binary on weak ARM SoCs.
default = ["script"]
# USB webcam / v4l / video-file input layer (pulls in extra decode deps).
camera = ["dep:nokhwa"]
# Embedded JS scripting runtime (automation + a 2D pixel buffer generator).
script = ["dep:boa_engine"]
# Ableton Link tempo/beat sync over the LAN (bundles the Link C++ lib).
link = ["dep:rusty_link"]

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"

# Rendering: raw GL via glow so the same code targets GLES2 (Pi/CHIP) and
# desktop GL 2.1 (macOS/Linux). winit + glutin provide the window and context.
glow = "0.16"
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"

# Audio capture + analysis.
cpal = "0.15"
realfft = "3"

# Control inputs: MIDI (incl. virtual ports) and OSC over UDP.
midir = "0.10"
rosc = "0.10"

# Web control surface: axum server, websockets, protobuf, embedded assets.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "fs"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
prost = "0.13"
rust-embed = { version = "8", features = ["mime-guess"] }
font8x8 = "0.3.1"
fontdue = "0.9.3"
jpeg-encoder = "0.6.1"

# Media input layers: raster decode (PNG/JPEG) and SVG rasterisation. Used only
# when a media layer loads a file, so the cost is one-off at load time.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
resvg = { version = "0.44", default-features = false }

# Webcam / v4l capture for the video input layer (macOS AVFoundation + Linux
# v4l2). Optional: only built with the `camera` feature.
nokhwa = { version = "0.10", features = ["input-native"], optional = true }
boa_engine = { version = "0.20", optional = true }
rusty_link = { version = "0.4.9", optional = true }

[build-dependencies]
# Pure-Rust protobuf compilation: no system `protoc` needed.
protox = "0.7"
prost-build = "0.13"

[profile.release]
# Tuned for small, fast binaries on constrained ARM targets.
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
