[package]
name = "audiovis-wasm"
version = "0.1.0"
edition = "2021"
description = "wasm-bindgen wrapper that runs the audiovis render core in a browser WebGL1 context."
authors = ["DatanoiseTV"]
license = "MIT"
publish = false

# A C-style dynamic library so `wasm-bindgen` can post-process it into the
# `.wasm` + JS glue the browser loads. `rlib` is added so the wasm crate's
# tests / other consumers can also link against the Rust API directly.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The shared render core compiled for wasm32 (the same Rust, the same GLSL).
audiovis-render-core = { version = "0.1", path = "../render-core" }
# `glow` exposes a `Context::from_webgl1_context(...)` constructor on wasm32, so
# the render core's existing `glow` calls target WebGL with no abstraction layer
# of our own.
glow = "0.16"
# wasm-bindgen + a tiny slice of web-sys to take a `<canvas>` from JS and pull
# a WebGL1 context off it.
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
tracing = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "Window",
    "console",
]

[profile.release]
# Small wasm binary: keep symbols + LTO, drop unwind tables (we abort).
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
